Updated ReadMe and added references of other material to it.
Updated readme doc

corrected style in readme